[gd_scene load_steps=11 format=3 uid="uid://d15awftd1p8gf"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_drgtq"]
[ext_resource type="Texture2D" uid="uid://b35xdt0wsy8dq" path="res://assets/sprites/ui/main_menu_background_image.png" id="2_pfv4s"]
[ext_resource type="Texture2D" uid="uid://da248g3q6mpmn" path="res://assets/images/main_menu_background.png" id="3_tvxq0"]
[ext_resource type="Texture2D" uid="uid://oy75p8euqu0u" path="res://assets/sprites/ui/logo_main_menu.png" id="4_ht387"]
[ext_resource type="Texture2D" uid="uid://cow632myqngtq" path="res://assets/images/background_menus_without_stripes.png" id="5_e0mrv"]
[ext_resource type="Theme" uid="uid://ckgyosp0xeif4" path="res://assets/themes/ui_theme.tres" id="5_v3wop"]
[ext_resource type="Texture2D" uid="uid://brkkq4dee1ji5" path="res://assets/sprites/ui/menu_background_icons.png" id="6_0sbks"]
[ext_resource type="FontFile" uid="uid://d0m6vo46ino1b" path="res://assets/fonts/Nunito-Bold.ttf" id="6_1soc7"]
[ext_resource type="Texture2D" uid="uid://qw15v4fm034i" path="res://assets/sprites/ui/play_icon.png" id="7_gsotp"]

[sub_resource type="LabelSettings" id="LabelSettings_4l6g3"]
font_size = 28

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_drgtq")
game_scene_path = "res://scenes/main_game.tscn"

[node name="BG" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_pfv4s")

[node name="MenuBG" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -909.0
offset_top = -540.0
offset_bottom = 540.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("3_tvxq0")

[node name="BoxContainer" type="BoxContainer" parent="MenuBG"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.635
anchor_right = 0.74
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24
alignment = 1
vertical = true

[node name="GameLogo" type="TextureRect" parent="MenuBG/BoxContainer"]
layout_mode = 2
texture = ExtResource("4_ht387")

[node name="BoxContainer" type="BoxContainer" parent="MenuBG/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
vertical = true

[node name="StartButton" type="Button" parent="MenuBG/BoxContainer/BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_v3wop")
theme_override_fonts/font = ExtResource("6_1soc7")
theme_override_font_sizes/font_size = 64
text = "Jogar"
icon = ExtResource("7_gsotp")

[node name="BoxContainer2" type="BoxContainer" parent="MenuBG/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16
vertical = true

[node name="ExitButton" type="Button" parent="MenuBG/BoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_v3wop")
theme_type_variation = &"RedButton"
text = "Opções"

[node name="ExitButton2" type="Button" parent="MenuBG/BoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_v3wop")
theme_type_variation = &"RedButton"
text = "Créditos"

[node name="ExitButton3" type="Button" parent="MenuBG/BoxContainer/BoxContainer2"]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("5_v3wop")
theme_type_variation = &"RedButton"
text = "Sair"

[node name="LoadingScreen" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_e0mrv")

[node name="Label" type="Label" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = -88.0
offset_right = 363.0
offset_bottom = -40.0
grow_vertical = 0
label_settings = SubResource("LabelSettings_4l6g3")
vertical_alignment = 1

[node name="BgUp" type="Sprite2D" parent="LoadingScreen"]
texture_repeat = 2
position = Vector2(960, 540)
texture = ExtResource("6_0sbks")
region_enabled = true
region_rect = Rect2(0, 0, 1920, 1080)

[node name="BgDown" type="Sprite2D" parent="LoadingScreen"]
texture_repeat = 2
position = Vector2(1020, 540)
texture = ExtResource("6_0sbks")
region_enabled = true
region_rect = Rect2(0, 0, 1920, 1080)

[connection signal="pressed" from="MenuBG/BoxContainer/BoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MenuBG/BoxContainer/BoxContainer2/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MenuBG/BoxContainer/BoxContainer2/ExitButton2" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="MenuBG/BoxContainer/BoxContainer2/ExitButton3" to="." method="_on_exit_button_pressed"]
